--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="styles.css"/>
 </head>
 <body>
+    <form id="post-form">
+        <input id="post-name" type="text" placeholder="Student Name">
+        <input id="post-grade" type="text" placeholder="Grade Level">
+        <input id="post-submit" type="text" placeholder="Submit">
+
+    </form>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <script src="app.js"></script>
     <h2 id="derp"></h2>
